# 14_IndexFeminisationPouvoir

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TECHNICAL.md  biome.json  docker-compose.yml  pyproject.toml  pytest.ini  tox.ini
.claude/: settings.local.json
.github/workflows/: nextjs.yaml  pre-commit.yaml  pytest.yml  run-scrapers.yaml
dbt_ifp/: .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_ifp/excel_reports/: generate_reports.py  rapport_figures.xlsx  reference_figures.csv
dbt_ifp/macros/: generate_schema_name.sql
dbt_ifp/seeds/: figure10_2026.csv  figure11_2026.csv  figure1a_2026.csv  figure1b_2026.csv  figure1c_2026.csv  figure1d_2026.csv  figure1e_2026.csv  figure2a_2026.csv  figure2a_20260312_090553.csv  figure2b_2026.csv  figure2c_2026.csv  figure2c_20260312_090553.csv  figure2d_2026.csv  figure3a_20260312_090553.csv  figure3b_2026.csv  figure3c_2026.csv  figure3d_2026.csv  figure4_2026.csv  figure5b_2026.csv  figure6a_2026.csv  figure6a_20260312_090553.csv  figure6b_20260320_140724.csv  figure7a_2025.csv  figure7b_2026.csv  figure8_2026.csv  (+3 more)
ifp/: dbt_project.yml
nextjs/: README.md  biome.json  next.config.ts  package-lock.json  package.json
scrapers/: README.md  constants.py  main.py  pytest.ini  requirements.txt  run_spiders.py  settings_manager.py
scrapers_ifp/: scrapy.cfg
scripts/: count_gender_by_department.py  test_update_pouvoir.py  update_maires_scores.py  update_pouvoir.py  update_scores_pouvoir_local.py
tests/: test_models.py  test_spiders.py
(+320 files in other folders)
