[project]
name = "14-index-feminisation-pouvoir"
version = "0.1.0"
description = """Outils de scraping et calcul de l'index de féminisation du pouvoir d'OXFAM,\
et gestion des pages web associées"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.1.3",
    "duckdb-engine>=0.15.0",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "ipython-sql>=0.5.0",
    "jupysql>=0.10.17",
    "matplotlib>=3.10.0",
    "nameparser>=1.1.3",
    "pandas>=2.2.3",
    "pydantic>=2.12.5",
    "requests>=2.32.3",
    "scrapy>=2.14.1",
    "scrapy-playwright==0.0.46",
]
